--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
