added tailwind, styled layout and home

--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
@@ -11,8 +12,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
-    "react-spinners": "^0.17.0",
-    "tailwindcss": "^4.1.10"
+    "react-spinners": "^0.17.0"
   },
   "scripts": {
     "dev": "vite",
@@ -38,6 +38,10 @@
     ]
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.6.0"
+    "@vitejs/plugin-react": "^4.6.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^4.1.10",
+    "vite": "^6.3.5"
   }
 }
